--- a/src/slic3/templates/index.html
+++ b/src/slic3/templates/index.html
@@ -8,4 +8,7 @@
 			<input class="button" type=submit value="Shorten">
 		</form>
 	</div>
+	<div>
+		<p style="display:inline" class="attention">Note: Anyone can see any link you enter here on the </p><a class="attention" style="display:inline" href="active_links">Active links</a><p class="attention" style="display:inline"> page!</p>
+	</div>
 {% endblock %}
