--- a/src/slic3/templates/about.html
+++ b/src/slic3/templates/about.html
@@ -8,7 +8,7 @@
 		<h2>It can turn this garbage:</h2>
 		<a style="word-break:break-all" href="{{ example_link }}">{{ example_link }}</a>
 		<h2>To this beauty:</h2>
-		<a href="{{ example_short }}">{{ my_url }}{{ example_short }}</a>
+		<a href="{{ example_short }}" style="word-break: break-all">{{ my_url }}{{ example_short }}</a>
 		<hr>
 		<h2>About slic3 links</h2>
 		<p style="display:inline" >
