--- a/src/slic3/templates/index.html
+++ b/src/slic3/templates/index.html
@@ -4,7 +4,7 @@
 	<div>
 		<label class="text" for="textInput">Paste a link to shorten:</label>
 		<form action="/new_link" method="POST">
-			<input name="url" class="textInput" type=text autofocus><br>
+			<input name="url" class="textInput" type=text autofocus autocomplete="off" required><br>
 			<input class="button" type=submit value="Shorten">
 		</form>
 	</div>
